# SyLife

./: .clang-format  .editorconfig  .gitignore  .gitignore.swp  Asset.cpp  Asset.h  AssetEditor.cpp  AssetEditor.h  AssetManager.cpp  AssetManager.h  AssetManager_MakeModel.cpp  Asset_Editor.cpp  Asset_Editor.h  Assets.cpp  Assets.h  AssetsViewer.cpp  Assets_makeModel.cpp  BodyAsset.cpp  BodyAsset.h  BodyAsset_Editor.cpp  BodyState.cpp  CMakeLists.txt  CellAsset.cpp  CellAsset.h  CellAsset_Editor.cpp  CellAsset_Log.cpp  CellBookViewer.cpp  CellBookViewer_CellList.cpp  CellEditor.h  CellMakingViewer.cpp  CellMakingViewer.h  CellMakingViewer_BodySculptor.cpp  CellMakingViewer_BodySculptor_LayerLists.cpp  CellMakingViewer_BodySculptor_Workspace.cpp  CellMakingViewer_PartsAssembler.cpp  CellMakingViewer_PartsAssembler_PartList.cpp  CellMakingViewer_PartsAssembler_Workspace.cpp  CellManager.cpp  CellManager.h  CellState.cpp  (+249 more)
App/: Resource.rc
App/assets/models/elements/: アミノ酸.json  ヘキソース.json  炭素.json  窒素.json  酸素.json
App/assets/models/parts/: neトゲ.json  o炭素合成器官.json  o酸素合成器官.json
App/resources/: generation.json  tile.frag  tile.hlsl
App/resources/assets/: Amino_acid.json  Big_Nucleus.json  Big_Wing(left).json  Big_Wing(right).json  Carbon.json  Carbonase.json  Hexose.json  Needle.json  Nitrogen.json  Oxgen.json  Oxgenase.json  Oxygen.json  Oxygenase.json  Small_Nucleus.json  Small_Wing(left).json  Small_Wing(right).json  Strong_Needle.json  neトゲ.json  nu小さな核.json  o炭素合成器官.json  o酸素合成器官.json  w小さな羽(右).json  w小さな羽(左).json  アミノ酸.json  ヘキソース.json  小さな核.json  炭素.json  窒素.json  酸素.json
App/resources/assets/cells/: aspidisca.json  aspidisca_body.json  asset_0.json  asset_1.json  asset_10.json  asset_11.json  asset_12.json  asset_13.json  asset_14.json  asset_15.json  asset_2.json  asset_3.json  asset_4.json  asset_5.json  asset_6.json  asset_7.json  asset_8.json  asset_9.json
App/resources/assets/parts/: Big_Nucleus.json  Big_Wing(left).json  Big_Wing(right).json  Carbonase.json  Eye.json  Needle.json  Oxygenase.json  Plumagenase.json  Small_Depoisoner.json  Small_Nucleus.json  Small_Poisoner.json  Small_Wing(left).json  Small_Wing(right).json  Spinagenase.json  Strong_Needle.json
App/resources/assets/proteins/: Amino_acid.json  Carbon.json  Hexose.json  Nitrogen.json  Oxygen.json  Plumagen.json  spinagen.json
Client/: Client.vcxproj  Client.vcxproj.filters  Main.cpp  stdafx.h
Editor/: AddModelViewer.cpp  AddModelViewer.h  AddNewModelViewer.cpp  AddNewModelViewer.h  AssemblyViewer.cpp  AssemblyViewer.h  AssetManager.cpp  AssetManager.h  AssetManager_AddModel.cpp  AssetManager_LoadCellModel.cpp  AssetManager_LoadCellModels.cpp  AssetManager_LoadMoleculeModel.cpp  AssetManager_LoadMoleculeModels.cpp  AssetManager_MakeModel.cpp  AssetViewer.cpp  AssetViewer.h  AssetViewer_SetSelectedModel.cpp  Body.cpp  Body.h  BodyConfig.cpp  BodyConfig.h  BodyModel.cpp  BodyModel.h  BodyPropertyViewer.cpp  BodyPropertyViewer.h  BodyViewer.cpp  BodyViewer.h  Canvas.cpp  Cell.cpp  Cell.h  CellModel.cpp  CellModel.h  CellModel_AddPartConfig.cpp  CellPropertyViewer.cpp  CellPropertyViewer.h  CellViewer.cpp  CellViewer.h  Cell_AddPartConfig.cpp  Chloroplast.cpp  Chloroplast.h  (+86 more)
Editor/App/: a.json  a.txt  body.json
Editor/App/assets/: generation.json
Editor/App/assets/cell/: micro_slag.json  mini_slug.json
Editor/App/assets/molecule/: amino_acid.json  carbon.json  nitrogen.json  oxygen.json
Editor/App/assets/recipe/: amino_acid.json  hexose.json
Linux_build/resources/assets/: Amino_acid.json  Big_Nucleus.json  Carbon.json  Carbonase.json  Hexose.json  Needle.json  Nitrogen.json  Oxgen.json  Oxgenase.json  Small_Ncleus.json  Small_Wing(left).json  Small_Wing(right).json
Server/: Server.vcxproj  Server.vcxproj.filters  Vector2D.h  main.cpp
SyLife/: AddModelViewer.cpp  AddModelViewer.h  AssemblyViewer.cpp  AssemblyViewer.h  Asset.cpp  Asset.h  AssetEditor.cpp  AssetEditor.h  AssetManager.cpp  AssetManager.h  AssetManager_AddModel.cpp  AssetManager_LoadCellModel.cpp  AssetManager_LoadCellModels.cpp  AssetManager_LoadMoleculeModel.cpp  AssetManager_LoadMoleculeModels.cpp  AssetManager_LoadPartModel.cpp  AssetManager_LoadPartModels.cpp  AssetManager_MakeModel.cpp  AssetModel.cpp  AssetModel.h  AssetModelEditor.h  AssetModelViewer.cpp  AssetModelViewer.h  AssetViewer.cpp  AssetViewer.h  AssetViewer_SetSelectedModel.cpp  AssetsViewer.cpp  AssetsViewer.h  AssetsViewer_SetSelectedModel.cpp  Body.cpp  Body.h  BodyAsset.cpp  BodyAsset.h  BodyConfig.cpp  BodyConfig.h  BodyEditor.cpp  BodyEditor.h  BodyModel.cpp  BodyModel.h  BodyState.cpp  (+285 more)
SyLife.xcodeproj/: project.pbxproj
SyLife.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SyLife.xcodeproj/project.xcworkspace/xcuserdata/sknjpn.xcuserdatad/: UserInterfaceState.xcuserstate
SyLife/App/: Resource.rc
SyLife/App/assets/: generation.json
empty.xcodeproj/: project.pbxproj
enc_temp_folder/94f94b77b9a891cb9fffc688dbaf392/: MainViewer.cpp
resources/assets/parts/: Eye.json  Spinagenase.json
server/: CMakeLists.txt  CMakeLists_Linux.txt
server/assets/: generation.json
server/assets/parts/: Big_Wing(left).json
src/: Asset.cpp  Asset.h  Asset_Editor.cpp  Asset_Editor.h  CellAsset.cpp  CellAsset.h  CellAsset_Log.cpp  CellState.cpp  CellState.h  DraggableViewer.h  EasyViewer.h  EditorViewer.cpp  EditorViewer.h  EditorViewer_AssetList.cpp  EditorViewer_AssetViewer.cpp  EggState.cpp  EggState.h  GUIAssetLinker.h  GUIButton.h  GUIChecker.h  GUIColorPicker.h  GUICurtain.h  GUIIcon.h  GUIMusicBox.h  GUISlider.h  GUIText.h  GUITextBox.h  GUITexture.h  GUIValuer.h  GeneralSetting.h  HiddenViewer.h  Layer.cpp  Layer.h  Main.cpp  MainViewer.cpp  MainViewer.h  MainViewer_CellAssetViewer.cpp  MainViewer_CellAssetViewer_CellStateViewer.cpp  MainViewer_CellBook.cpp  MainViewer_CellBook_Item.cpp  (+78 more)
web/: .gitignore  CMakeLists.txt  link.txt  publish.sh
web/assets/: names.txt
web/assets/parts/: Plumagenase.json  Small_Depoisoner.json  Small_Nucleus.json  Strong_Needle.json
web/resources/assets/parts/: Needle.json
(+79 files in other folders)
